--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.6.6"
   }
 }
